# notsomuchcomplex

./: pyproject.toml
nsmc/: __init__.py  emailproxy.py
